--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
 		"svelte": "^3.44.0",
 		"vite": "^2.9.13"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"firebase": "^9.9.0"
+	}
 }
