--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"firebase": "^9.9.0"
+		"firebase": "^9.9.0",
+		"svelte-toastify": "^0.0.27",
+		"toastify-js": "^1.11.2",
+		"uuid": "^8.3.2"
 	}
 }
